# ogc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  pylock.toml  pyproject.toml  setup.py  sonar-project.properties
.devcontainer/: dev_container.dockerfile  devcontainer.json
.github/workflows/: github-python-workflow.yml
example/: app.py
ogc/: __init__.py  core.py  ogc_common.py  podpac.py  servers.py  settings.py  version.py  wcs_request_1_0_0.py  wcs_response_1_0_0.py  wms_request_1_3_0.py  wms_response_1_3_0.py
ogc/edr/: __init__.py  edr_api.py  edr_config.py  edr_formatter.py  edr_provider.py  edr_routes.py
ogc/edr/config/: default.json
ogc/edr/static/css/: default.css
ogc/edr/test/: conftest.py  test_edr_config.py  test_edr_provider.py  test_edr_routes.py
ogc/test/: conftest.py  test_core.py  test_input_security.py  test_input_validation.py  test_servers.py  test_utf8_validation.py  test_version.py
ogc/wmts/: __init__.py  wmts_request_1_0_0.py  wmts_response_1_0_0.py  wmts_routes.py  wmts_routes_1_0_0.py
ogc/wmts/test/: conftest.py  test_wmts_request_1_0_0.py  test_wmts_response_1_0_0.py  test_wmts_routes.py  test_wmts_routes_1_0_0.py
test_files/: test_utf8_validation.py
